Commented/Documented Most recent classes

--- a/Game Engine Assignment/GameEngine/GameEngine/latex/refman.tex
+++ b/Game Engine Assignment/GameEngine/GameEngine/latex/refman.tex
@@ -140,12 +140,16 @@
 %--- Begin generated contents ---
 \chapter{Welcome to the Slap Engine Documentation}
 \label{index}\hypertarget{index}{}\input{index}
+\chapter{Hierarchical Index}
+\input{hierarchy}
 \chapter{Class Index}
 \input{annotated}
 \chapter{Class Documentation}
+\input{class_create_button}
 \input{class_input_manager}
 \input{class_logger}
 \input{class_physics}
+\input{class_physics_dynamic}
 \input{class_resource_manager}
 %--- End generated contents ---
 
