--- a/Game Engine Assignment/GameEngine/GameEngine/latex/annotated.tex
+++ b/Game Engine Assignment/GameEngine/GameEngine/latex/annotated.tex
@@ -1,7 +1,9 @@
 \section{Class List}
 Here are the classes, structs, unions and interfaces with brief descriptions\+:\begin{DoxyCompactList}
+\item\contentsline{section}{\hyperlink{class_create_button}{Create\+Button} }{\pageref{class_create_button}}{}
 \item\contentsline{section}{\hyperlink{class_input_manager}{Input\+Manager} }{\pageref{class_input_manager}}{}
 \item\contentsline{section}{\hyperlink{class_logger}{Logger} }{\pageref{class_logger}}{}
 \item\contentsline{section}{\hyperlink{class_physics}{Physics} }{\pageref{class_physics}}{}
+\item\contentsline{section}{\hyperlink{class_physics_dynamic}{Physics\+Dynamic} }{\pageref{class_physics_dynamic}}{}
 \item\contentsline{section}{\hyperlink{class_resource_manager}{Resource\+Manager} }{\pageref{class_resource_manager}}{}
 \end{DoxyCompactList}
