--- a/Game Engine Assignment/GameEngine/GameEngine/latex/class_physics.tex
+++ b/Game Engine Assignment/GameEngine/GameEngine/latex/class_physics.tex
@@ -1,18 +1,23 @@
 \hypertarget{class_physics}{}\section{Physics Class Reference}
 \label{class_physics}\index{Physics@{Physics}}
+Inheritance diagram for Physics\+:\begin{figure}[H]
+\begin{center}
+\leavevmode
+\includegraphics[height=2.000000cm]{class_physics}
+\end{center}
+\end{figure}
 \subsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
-void \hyperlink{class_physics_aa96588091a5f548bcbd3e93930bec919}{create\+Circle} (b2\+World \&world, int mouseX, int mouseY, float radius)
-\begin{DoxyCompactList}\small\item\em Create a dynamic circle sprite. \end{DoxyCompactList}\end{DoxyCompactItemize}
-\subsection*{Static Public Member Functions}
+\hyperlink{class_physics_a0daeacfe7e8db67dde6d85c355fdbb7a}{Physics} (b2\+World world, float x, float y, float width, float height)
+\begin{DoxyCompactList}\small\item\em Creates a default constructor for the \hyperlink{class_physics}{Physics} class. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\subsection*{Protected Attributes}
 \begin{DoxyCompactItemize}
 \item 
-static void \hyperlink{class_physics_af59917c046b199565db48749b67e40b9}{create\+Ground} (b2\+World \&world, float x, float y)
-\begin{DoxyCompactList}\small\item\em Create a static ground sprite. \end{DoxyCompactList}\item 
-static void \hyperlink{class_physics_ada8fc01ca58dca7c2dc221a73f9816ec}{create\+Box} (b2\+World \&world, int mouseX, int mouseY)
-\begin{DoxyCompactList}\small\item\em Create a dynamic box sprite. \end{DoxyCompactList}\end{DoxyCompactItemize}
-\subsection*{Static Public Attributes}
+\mbox{\Hypertarget{class_physics_a9ba278cda18f49ef2b18b0b293c7f666}\label{class_physics_a9ba278cda18f49ef2b18b0b293c7f666}} 
+b2\+Body $\ast$ \hyperlink{class_physics_a9ba278cda18f49ef2b18b0b293c7f666}{body}
+\begin{DoxyCompactList}\small\item\em Points to a b2\+Body. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\subsection*{Static Protected Attributes}
 \begin{DoxyCompactItemize}
 \item 
 \mbox{\Hypertarget{class_physics_a12f73191c1306ae4376d5934c83a4ae6}\label{class_physics_a12f73191c1306ae4376d5934c83a4ae6}} 
@@ -20,56 +25,16 @@ static std\+::vector$<$ b2\+Body $\ast$ $>$ \hyperlink{class_physics_a12f73191c1
 \begin{DoxyCompactList}\small\item\em Create a vector of all physics bodies created. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
-\subsection{Member Function Documentation}
-\mbox{\Hypertarget{class_physics_ada8fc01ca58dca7c2dc221a73f9816ec}\label{class_physics_ada8fc01ca58dca7c2dc221a73f9816ec}} 
-\index{Physics@{Physics}!create\+Box@{create\+Box}}
-\index{create\+Box@{create\+Box}!Physics@{Physics}}
-\subsubsection{\texorpdfstring{create\+Box()}{createBox()}}
-{\footnotesize\ttfamily void Physics\+::create\+Box (\begin{DoxyParamCaption}\item[{b2\+World \&}]{world,  }\item[{int}]{mouseX,  }\item[{int}]{mouseY }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [static]}}
+\subsection{Constructor \& Destructor Documentation}
+\mbox{\Hypertarget{class_physics_a0daeacfe7e8db67dde6d85c355fdbb7a}\label{class_physics_a0daeacfe7e8db67dde6d85c355fdbb7a}} 
+\index{Physics@{Physics}!Physics@{Physics}}
+\index{Physics@{Physics}!Physics@{Physics}}
+\subsubsection{\texorpdfstring{Physics()}{Physics()}}
+{\footnotesize\ttfamily Physics\+::\+Physics (\begin{DoxyParamCaption}\item[{b2\+World}]{world,  }\item[{float}]{x,  }\item[{float}]{y,  }\item[{float}]{width,  }\item[{float}]{height }\end{DoxyParamCaption})}
 
 
 
-Create a dynamic box sprite. 
-
-
-\begin{DoxyParams}{Parameters}
-{\em b2\+World} & world \\
-\hline
-{\em int} & mouseX \\
-\hline
-{\em int} & mouseY \\
-\hline
-\end{DoxyParams}
-\mbox{\Hypertarget{class_physics_aa96588091a5f548bcbd3e93930bec919}\label{class_physics_aa96588091a5f548bcbd3e93930bec919}} 
-\index{Physics@{Physics}!create\+Circle@{create\+Circle}}
-\index{create\+Circle@{create\+Circle}!Physics@{Physics}}
-\subsubsection{\texorpdfstring{create\+Circle()}{createCircle()}}
-{\footnotesize\ttfamily void Physics\+::create\+Circle (\begin{DoxyParamCaption}\item[{b2\+World \&}]{world,  }\item[{int}]{mouseX,  }\item[{int}]{mouseY,  }\item[{float}]{radius }\end{DoxyParamCaption})}
-
-
-
-Create a dynamic circle sprite. 
-
-
-\begin{DoxyParams}{Parameters}
-{\em b2\+World} & world \\
-\hline
-{\em int} & mouseX \\
-\hline
-{\em int} & mouseY \\
-\hline
-{\em float} & radius \\
-\hline
-\end{DoxyParams}
-\mbox{\Hypertarget{class_physics_af59917c046b199565db48749b67e40b9}\label{class_physics_af59917c046b199565db48749b67e40b9}} 
-\index{Physics@{Physics}!create\+Ground@{create\+Ground}}
-\index{create\+Ground@{create\+Ground}!Physics@{Physics}}
-\subsubsection{\texorpdfstring{create\+Ground()}{createGround()}}
-{\footnotesize\ttfamily void Physics\+::create\+Ground (\begin{DoxyParamCaption}\item[{b2\+World \&}]{world,  }\item[{float}]{x,  }\item[{float}]{y }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [static]}}
-
-
-
-Create a static ground sprite. 
+Creates a default constructor for the \hyperlink{class_physics}{Physics} class. 
 
 
 \begin{DoxyParams}{Parameters}
@@ -78,6 +43,10 @@ Create a static ground sprite.
 {\em float} & x \\
 \hline
 {\em float} & y \\
+\hline
+{\em float} & width \\
+\hline
+{\em float} & height \\
 \hline
 \end{DoxyParams}
 
